# PasswordChef

./: Cargo.toml  README.md
src/: candidate_generator.rs  main.rs  recipe_parser.rs  recipe_step.rs
src/items/: case_modifier.rs  concat.rs  constant.rs  duplicate.rs  incrementer_trait.rs  mask.rs  mod.rs  optional_modifier.rs  rearrange.rs  replace.rs  wordlist.rs
