[package]
name = "PasswordChef"
version = "0.0.4"
authors = ["neonLian"]
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
constcat = "0.6.0"
flexstr = "0.9.2"
itertools = "0.14.0"
logos = "0.15.0"
smallvec = "1.15.0"
strum = "0.27.1"
strum_macros = "0.27.1"
trim-in-place = "0.1.7"
unicode_titlecase = "2.4.0"
